--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Exo+2:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-<!----font-Awesome----->
+<!--font-Awesome-->
 <link rel="stylesheet" href="fonts/css/font-awesome.min.css">
-<!----font-Awesome----->					
+<!--font-Awesome-->					
 </head>
 <body>
 <div class="header_top">
@@ -35,7 +35,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="index.html"><span data-hover="Home">Home</span></a><label> </label></li>
 						<li class="active"><a href="about.html"> <span data-hover="About">About</span></a><label> </label></li>
 						<li><a href="services.html"><span data-hover="Services">Services</span></a><label> </label></li>
-						<li><a href="404.html"><span data-hover="Blog">Blog</span></a></li>
+						<!-- <li><a href="404.html"><span data-hover="Blog">Blog</span></a></li> -->
 						<li><a href="contact.html"><span data-hover="Contact">Contact</span></a><label> </label></li>
 					</ul>
 					<!--script-->
