--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Exo+2:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-<!------ Light Box ------>
+<!-- Light Box -->
 <link rel="stylesheet" href="css/swipebox.css">
 <script src="js/jquery.swipebox.min.js"></script> 
     <script type="text/javascript">
@@ -30,7 +30,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			$(".swipebox").swipebox();
 		});
 	</script>
-<!------ Eng Light Box ------>	   
+<!-- Eng Light Box -->	   
 <!-- Prettify -->
 <link href="css/owl.carousel.css" rel="stylesheet">
 <script src="js/owl.carousel.js"></script>
@@ -45,10 +45,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 });
 		});
 	</script>
-<!----- //End-Share-instantly-slider---->
-<!----font-Awesome----->
+<!--//End-Share-instantly-slider-->
+<!--font-Awesom-->
 <link rel="stylesheet" href="fonts/css/font-awesome.min.css">
-<!----font-Awesome----->					
+<!--font-Awesome-->					
 </head>
 <body>
 <div class="header_top">
@@ -59,7 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li class="active"><a href="index.html"><span data-hover="Home">Home</span></a><label> </label></li>
 						<li><a href="about.html"> <span data-hover="About">About</span></a><label> </label></li>
 						<li><a href="services.html"><span data-hover="Services">Services</span></a><label> </label></li>
-						<li><a href="404.html"><span data-hover="Blog">Blog</span></a></li>
+						<!-- <li><a href="404.html"><span data-hover="Blog">Blog</span></a></li> -->
 						<li><a href="contact.html"><span data-hover="Contact">Contact</span></a><label> </label></li>
 					</ul>
 					<!--script-->
